# axum-from-openapi

./: .rustfmt.toml  Cargo.toml  petstore.json
axum-generated/: .gitignore  Cargo.toml  build.rs
axum-generated/apis/: petstore.json
axum-generated/src/: main.rs
src/: lib.rs  main.rs  petstore.json  petstore.yaml
