[package]
name = "axum-openapi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openapiv3 = "1.0.1"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
json_typegen = "0.7"
quote = "1"
proc-macro2 = "1"
http = "0.2"
multimap = "0.8"
prettyplease = "0.1"
syn = "1"
convert_case="*"