[package]
name = "axum-generated"
version = "0.1.0"
edition = "2021"

    
[dependencies]
axum={version = "0.6", features=["default", "headers"]}
tokio = { version = "1.0", features = ["full"] }

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"


[build-dependencies]
axum_from_openapi = { path="../"}
